# EngineAgent

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.codex/agents/: analysis-spec.agent.md  architecture-contracts.agent.md  core-solver.agent.md  data-import-benchmark-calibration.agent.md  desktop-gui.agent.md  documentation.agent.md  orchestrator.agent.md  physics-numerics-rigor.agent.md  reviewer.agent.md  validation-qa.agent.md
.codex/instructions/: analysis-spec.instructions.md  architecture-contracts.instructions.md  core-solver.instructions.md  data-import-benchmark-calibration.instructions.md  desktop-gui.instructions.md  documentation.instructions.md  orchestrator.instructions.md  physics-numerics-rigor.instructions.md  reviewer.instructions.md  validation-qa.instructions.md
.github/: copilot-instructions.md
.github/agents/: analysis.agent.md  architect.agent.md  core-solver.agent.md  documentation.agent.md  gui.agent.md  orchestrator.agent.md  reviewer.agent.md  validation.agent.md
.github/instructions/: core-solver.instructions.md  gui.instructions.md  qa.instructions.md
.process/: DECISIONS.md  NEXT-STEPS.md  STATUS.md
tests/: test_orchestrator_structure.py
