[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywavedyn-engineagent"
version = "0.1.0"
description = "Multi-agent orchestration scaffold for PyWaveDyn engine simulation development"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AlejandraValentina159" }]
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"
